<resources>
    <string name="app_name">Darts Companion</string>
    <string name="player_name">Player Name</string>
    <string name="multipy_2">* 2</string>
    <string name="multipy_1">* 1</string>
    <string name="multipy_3">* 3</string>
    <string name="dart_1TV">Dart 1</string>
    <string name="dart_one_hint">Dart One</string>
    <string name="dart_2_TV">Dart 2</string>
    <string name="dart_two_TF">Dart Two</string>
    <string name="dart_3TV">Dart 3</string>
    <string name="dart_threeTF">Dart Three</string>
    <string name="calculate">Calculate</string>
    <string name="input">Input</string>
    <string name="open_calculator">Open Calculator</string>
    <string name="enter_total_score">Enter Total Score</string>
    <string name="current_score">Current Score</string>
    <string name="current_player">Player: </string>
    <string name="choose_game_type">Choose Game Type</string>
    <string name="_501">501</string>
    <string name="_301">301</string>
    <string name="_101">101</string>
    <string name="number_of_sets">No. of Sets</string>
    <string name="number_of_legs">No. of Legs</string>
    <string name="game">Game</string>
    <string name="number_of_players">No. of Players</string>
    <string name="players">Players</string>
    <string name="names">Names</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="player_4">Player 4</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="player">Player</string>
    <string name="_0">0</string>
    <string name="start">Start</string>
    <string name="game_over">Game Over</string>
    <string name="wins">Wins</string>
    <string name="legs">Legs</string>
    <string name="won">Rounds Won</string>
    <string name="num">num</string>
    <string name="round_over">Round Over</string>
    <string name="lost">Rounds Lost</string>
    <string name="done">Done</string>
    <string name="close_game">Close Game</string>
    <string name="number_legs_not_set">Legs cannot be Zero</string>
    <string name="invalid_entry">Invalid Entry</string>
    <string name="no_empty_fields">Fields cannot be left empty</string>
    <string name="are_you_ready_to_close_game">Are you sure you want to end the game?</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="information">i</string>
    <string name="rounds">Round</string>
    <string name="how_to">How to</string>
    <string name="round_wins">Wins</string>
    <string name="rounds_lost">Lost</string>
    <string name="darts">Darts</string>
    <string name="mult_1">* 1</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="mult_2">* 2</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="mult_3">* 3</string>
    <string name="clear">Clear</string>
    <string name="simple_ime">Simple IME</string>
    <string name="subtype_en_US">English (US)</string>
    <string name="dart_one">Dart One</string>
    <string name="dart_two">Dart Two</string>
    <string name="dart_three">Dart Three</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="draw">Draw</string>
    <string name="double_out">Need a double to finish</string>
    <string name="left_swipe">Left Swipe:</string>
    <string name="right_swipe">Right Swipe:</string>
    <string name="calculator_info">Opens calculator.</string>
    <string name="round_information_info">Displays round information.</string>
    <string name="app_usage">App Usage</string>
    <string name="calculator_usage_info">Pressing calculate whilst Input field is empty opens the calculator.</string>
    <string name="other_info">Other Info:</string>
    <string name="practice">Practice</string>
    <string name="press_here">Press here</string>
    <string name="shots_taken">Shots Taken</string>
    <string name="current_goal">Current Target</string>
    <string name="_10">10</string>
    <string name="single">Single</string>
    <string name="_double">Double</string>
    <string name="triple">Triple</string>
    <string name="type">Type</string>
    <string name="number">Number</string>
    <string name="no_of_throws">No. of Throws</string>
    <string name="attempts">Attempts</string>
    <string name="throws_missed">No. of Misses</string>
    <string name="finished">Finished</string>
    <string name="misses">Misses</string>
    <string name="current_goal_practice_info">Current target displays a number on the board, which the player needs to hit this in a few shots as possible.</string>
    <string name="number_of_throws_info">Player must enter the number of throws it takes them to hit the current goal.</string>
    <string name="finish_info">Upon pressing back, a dialog is displayed. This dialog highlights the players weakest numbers during their practice session.</string>
    <string name="number_of_participants">No. of Participants:</string>
    <string name="username">Username:</string>
    <string name="name">Name</string>
    <string name="tournament_setup">Tournament Setup</string>

    <string-array name="dartboard">
        <item>1 Single</item>
        <item>2 Single</item>
        <item>3 Single</item>
        <item>4 Single</item>
        <item>5 Single</item>
        <item>6 Single</item>
        <item>7 Single</item>
        <item>8 Single</item>
        <item>9 Single</item>
        <item>10 Single</item>
        <item>11 Single</item>
        <item>12 Single</item>
        <item>13 Single</item>
        <item>14 Single</item>
        <item>15 Single</item>
        <item>16 Single</item>
        <item>17 Single</item>
        <item>18 Single</item>
        <item>19 Single</item>
        <item>20 Single</item>

        <item>1 Double</item>
        <item>2 Double</item>
        <item>3 Double</item>
        <item>4 Double</item>
        <item>5 Double</item>
        <item>6 Double</item>
        <item>7 Double</item>
        <item>8 Double</item>
        <item>9 Double</item>
        <item>10 Double</item>
        <item>11 Double</item>
        <item>12 Double</item>
        <item>13 Double</item>
        <item>14 Double</item>
        <item>15 Double</item>
        <item>16 Double</item>
        <item>17 Double</item>
        <item>18 Double</item>
        <item>19 Double</item>
        <item>20 Double</item>

        <item>1 Triple</item>
        <item>2 Triple</item>
        <item>3 Triple</item>
        <item>4 Triple</item>
        <item>5 Triple</item>
        <item>6 Triple</item>
        <item>7 Triple</item>
        <item>8 Triple</item>
        <item>9 Triple</item>
        <item>10 Triple</item>
        <item>11 Triple</item>
        <item>12 Triple</item>
        <item>13 Triple</item>
        <item>14 Triple</item>
        <item>15 Triple</item>
        <item>16 Triple</item>
        <item>17 Triple</item>
        <item>18 Triple</item>
        <item>19 Triple</item>
        <item>20 Triple</item>

        <item>25 Single</item>
        <item>50 Single</item>
    </string-array>
</resources>
